# game-api

./: .gitignore  README.md  pyproject.toml
game_api/: __init__.py  main.py
game_api/controller/: recommendation.py
game_api/domain/recommendation/: __init__.py
game_api/helpers/: __init__.py
game_api/infra/: config.py  database.py
game_api/repository/: recommendation.py
game_api/service/: recommendation.py
