[tool.poetry]
name = "game-api"
version = "0.1.0"
description = ""
authors = ["Vitor Costa <vitorcosta-pm@hotmail.com>"]
readme = "README.md"
packages = [{include = "game_api"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.2.3"
flask-restful = "^0.3.9"
pymongo = "^4.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
